--- a/package.json
+++ b/package.json
@@ -1,14 +1,17 @@
 {
   "name": "lunar_calendar",
   "version": "0.1.0",
-  "description": "",
+  "description": "Lunar Calendar API with Gregorian conversion",
+  "main": "dist/index.js",
   "scripts": {
-    "start": "node js/src",
+    "start": "node dist/index.js",
     "build": "tsc",
-    "watch-ts": "tsc -w",
-    "watch-node": "node --watch js/src",
-    "dev": "concurrently -c \"blue,green\" \"npm:watch-ts\" \"npm:watch-node\" --kill-others",
-    "test": "mocha 'js/tests/**/*.test.js'"
+    "dev": "ts-node src/index.ts",
+    "test": "mocha 'dist/tests/**/*.test.js'",
+    "vercel-build": "npm run build"
+  },
+  "engines": {
+    "node": ">=18.0.0"
   },
   "author": "Huynh Nhan Thap",
   "license": "MIT",
@@ -17,7 +20,8 @@
     "@types/express": "^4.17.21",
     "@types/node": "^20.11.28",
     "mocha": "^10.3.0",
-    "typescript": "^5.4.2"
+    "typescript": "^5.4.2",
+    "ts-node": "^10.9.1"
   },
   "dependencies": {
     "cors": "^2.8.5",
