--- a/package.json
+++ b/package.json
@@ -1,17 +1,14 @@
 {
   "name": "lunar_calendar",
   "version": "0.1.0",
-  "description": "Lunar Calendar API with Gregorian conversion",
-  "main": "dist/index.js",
+  "description": "",
   "scripts": {
-    "start": "node dist/index.js",
+    "start": "node dist/src",
     "build": "tsc",
-    "dev": "ts-node src/index.ts",
-    "test": "mocha 'dist/tests/**/*.test.js'",
-    "vercel-build": "npm run build"
-  },
-  "engines": {
-    "node": ">=18.0.0"
+    "watch-ts": "tsc -w",
+    "watch-node": "node --watch dist/src",
+    "dev": "concurrently -c \"blue,green\" \"npm:watch-ts\" \"npm:watch-node\" --kill-others",
+    "test": "mocha 'dist/tests/**/*.test.js'"
   },
   "author": "Huynh Nhan Thap",
   "license": "MIT",
@@ -20,8 +17,7 @@
     "@types/express": "^4.17.21",
     "@types/node": "^20.11.28",
     "mocha": "^10.3.0",
-    "typescript": "^5.4.2",
-    "ts-node": "^10.9.1"
+    "typescript": "^5.4.2"
   },
   "dependencies": {
     "cors": "^2.8.5",
